# nbc_rams

./: .gitignore
backend/: main.py  pyproject.toml  requirements.txt
backend/presets/: __init__.py  router.py  scenarios.yaml
backend/simulation/: __init__.py  deposition.py  lpfm.py  meteorology.py  terrain.py
docs/superpowers/plans/: 2026-05-21-nbc-rams-plan.md
docs/superpowers/specs/: 2026-05-21-nbc-rams-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  store.ts  style.css
frontend/src/cesium/: Viewer.ts
frontend/src/dashboard/: InputPanel.ts  MetricsPanel.ts
frontend/src/layers/: ConcentrationLayer.ts  PuffLayer.ts
frontend/src/websocket/: client.ts
tests/: test_lpfm.py
